--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,8 +1,9 @@
 @use "../abstracts" as *;
 
+// Functionality
 .card {
   position: relative;
-  height: 50rem;
+  height: 52rem;
 
   perspective: 150rem;
   -moz-perspective: 150rem;
@@ -11,11 +12,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 50rem;
+    height: 52rem;
     width: 100%;
     transition: all 0.8s ease;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.15);
 
     &--front {
@@ -25,7 +27,7 @@
     &--back {
       transform: rotateY(180deg);
 
-      &-1 {
+      &--1 {
         background-image: linear-gradient(
           to right bottom,
           $color-secondary-light,
@@ -33,7 +35,7 @@
         );
       }
 
-      &-2 {
+      &--2 {
         background-image: linear-gradient(
           to right bottom,
           $color-primary-light,
@@ -41,7 +43,7 @@
         );
       }
 
-      &-3 {
+      &--3 {
         background-image: linear-gradient(
           to right bottom,
           $color-tertiary-light,
@@ -52,10 +54,98 @@
   }
 
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0deg);
+  }
+
+  // Frontside Styling
+  &__picture {
+    height: 23rem;
+    background-size: cover;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+
+    &--2 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+
+    &--3 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+  }
+
+  &__heading {
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+
+    &--2 {
+    }
+
+    &--3 {
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
+    }
   }
 }
