Finish the tours section

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,6 +3,15 @@
   text-align: center;
 }
 
+// Adds margin to the top
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
+
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
 // Adds margin at the bottom
 .u-margin-bottom-big {
   margin-bottom: 8rem;
