Finish the booking section

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 
 .btn {
+  &,
   &:link,
   &:visited {
     display: inline-block;
@@ -11,6 +12,10 @@
     border-radius: 10rem;
     transition: all 0.2s;
     position: relative;
+
+    // Change for the <button> form-element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -23,7 +28,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
