--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -75,14 +75,11 @@
     border-radius: 50%;
 
     &::after {
-      position: absolute;
-      top: 50%;
-      left: 50%;
+      @include center;
       content: "";
       height: 1.3rem;
       width: 1.3rem;
       border-radius: 50%;
-      transform: translate(-50%, -50%);
       background-color: $color-primary;
       opacity: 0;
       transition: opacity 0.2s;
