--- a/sass/main.css
+++ b/sass/main.css
@@ -534,7 +534,7 @@ body {
   opacity: 0;
   transition: opacity 0.2s;
 }
-.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
   opacity: 1;
 }
 
@@ -719,6 +719,7 @@ body {
   width: 7rem;
   border-radius: 50%;
   z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
 }
 .navigation__background {
   position: fixed;
@@ -729,15 +730,17 @@ body {
   border-radius: 50%;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
-  transform: scale(80);
+  transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
 }
 .navigation__nav {
   position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   height: 100vh;
-  width: 100%;
   z-index: 1500;
+  opacity: 0;
+  width: 0;
+  transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
 .navigation__list {
   position: absolute;
@@ -746,6 +749,7 @@ body {
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
+  width: 100%;
 }
 .navigation__item {
   margin: 1rem;
@@ -770,6 +774,13 @@ body {
   background-position: 100%;
   color: #55c57a;
   transform: translateX(1rem);
+}
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80);
+}
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%;
 }
 
 .section-about {
