--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 
 .navigation {
+  // Styling
   &__checkbox {
     display: none;
   }
@@ -15,6 +16,8 @@
     border-radius: 50%;
     z-index: 2000;
     box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: 0.1);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -88,6 +91,7 @@
     }
   }
 
+  // Functionality
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -95,5 +99,58 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  // Icon
+  &__icon {
+    position: relative;
+    margin-top: 3.5rem;
+
+    &,
+    &::before,
+    &::after {
+      display: inline-block;
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-light-3;
+    }
+
+    &::before,
+    &::after {
+      position: absolute;
+      left: 0;
+      content: "";
+      transition: all 0.2s;
+    }
+
+    &::before {
+      top: -0.8rem;
+    }
+
+    &::after {
+      top: 0.8rem;
+    }
+  }
+
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg); // 180° - 45°
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
