--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -35,7 +35,7 @@
   }
 
   &__caption {
-    @include center;
+    @include absCenter;
     color: $color-white;
     text-transform: uppercase;
     font-size: 1.7rem;
