--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -48,7 +48,7 @@
   }
 
   &__list {
-    @include center;
+    @include absCenter;
     list-style: none;
     text-align: center;
     width: 100%;
