--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -8,6 +8,10 @@
   width: 100%;
   background-color: rgba($color: $color-black, $alpha: 0.8);
   z-index: 3000;
+  opacity: 0;
+  visibility: hidden;
+  line-height: 1;
+  transition: all 0.3s;
 
   &__content {
     display: table;
@@ -17,6 +21,9 @@
     box-shadow: 0 2rem 4rem rgba($color: $color-black, $alpha: 0.2);
     border-radius: 3px;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: all 0.4s 0.2s;
   }
 
   &__left {
@@ -52,5 +59,34 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  // Open states
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      display: inline-block;
+      position: absolute;
+      top: 2.4rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      color: $color-grey-dark;
+      transition: all 0.3s;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
