--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as *;
+
 *,
 *::after,
 *::before {
@@ -8,8 +10,21 @@
 }
 
 html {
-  // Define that 1rem is 10px
+  // Defines that 1rem is 10px ( 10px / 16px = 62.5% )
   font-size: 62.5%;
+
+  // 1rem = 9px
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  // 1rem = 8px
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+  // 1rem = 12px
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
 }
 
 body {
