--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -32,6 +32,8 @@ $breakpoint argument choices:
 - tab-port
 - tab-land
 - big-desktop
+
+~ Order: Base + typography > general layout + grid > page layout > components ~
 */
 @mixin respond($breakpoint) {
   // 600px
