--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,4 +30,9 @@ html {
 body {
   // Alternative box-model
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
