Add media queries: Layout, about and features

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,5 @@
+@use "../abstracts" as *;
+
 // Centers the text
 .u-center-text {
   text-align: center !important;
@@ -15,10 +17,18 @@
 // Adds margin at the bottom
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .u-margin-bottom-small {
