--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -9,6 +9,10 @@
   box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: 0.15);
   transition: all 0.3s;
 
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
   &__icon {
     display: inline-block;
     font-size: 6rem;
@@ -21,6 +25,10 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover {
