--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -24,11 +24,20 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.5);
     transition: all 0.4s 0.2s;
+
+    @include respond(phone) {
+      display: block;
+    }
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(phone) {
+      width: 100%;
+      display: block;
+    }
   }
 
   &__right {
