--- a/sass/main.css
+++ b/sass/main.css
@@ -707,6 +707,13 @@ body {
   line-height: 1;
   transition: all 0.3s;
 }
+@supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+  .popup {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
 .popup__content {
   display: table;
   position: absolute;
