--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -186,7 +186,7 @@
   }
 
   // Media Query
-  @include respond(tab-port) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
